# supervise

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: regression.yml  release.yml
src/: app.rs  config.rs  exec.rs  main.rs  prelude.rs
src/app/: components.rs
src/exec/: child_process.rs
tests/: cli.rs
