[package]
name = "supervise"
version = "0.1.0"
authors = ["tmtmtoo <tmtmt2209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.36"
derive-new = "0.5.8"
derive_more = "0.99.9"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
