[package]
name = "supervise"
version = "0.1.1"
authors = ["tmtmtoo <tmtmt2209@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple command line supervisor tool."
repository = "https://github.com/tmtmtoo/supervise"
homepage = "https://github.com/tmtmtoo/supervise"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["process", "supervisor"]

[badges]
github = { repository = "tmtmtoo/supervise", workflow = "Rust" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
derive_more = "0.99.9"
derive-getters = "0.1.0"
apply = "0.2.2"
structopt = "0.2"
anyhow = "1.0.32"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "time", "process", "io-util", "io-std"] }
async-trait = "0.1.37"
futures = "0.3.5"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
test-case = "1.0.0"
